fdo#36051: Eliminated the hang due to removal of autofill undo object.

An artifact of the old code, which appears to do nothing meaningful
today was performing an incredibly slow operation upon destruction of
the autofill undo object.  Removed it, and also removed several other
methods and data members that were used only in that removed code.